--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,9 @@
         \item Alimentatore Lafayette AL-30S
         \item Generatore di funzioni inventario n°4618
         \item Fotocellula (facoltativo)
+        \item HIHIHIHA
+        \item PROVA
+        \item SKS
     \end{itemize}
 \end{multicols}
 \section{Riferimenti teorici}
