--- a/main.tex
+++ b/main.tex
@@ -21,15 +21,6 @@
         \item Cavetti rigidi
         \item CD4518
         \item CD4511
-        \item Resistori 2,2k\ohm \space 1/4W
-        \item Resistori 82\ohm \space 2W
-        \item Resistori 10k\ohm \space 1/4W
-        \item Alimentatore Lafayette AL-30S
-        \item Generatore di funzioni inventario n°4618
-        \item Fotocellula (facoltativo)
-        \item HIHIHIHA
-        \item PROVA
-        \item SKS
     \end{itemize}
 \end{multicols}
 \section{Riferimenti teorici}
@@ -42,6 +33,20 @@ Il segnale di clock è un segnale periodico, nel nostro caso un'onda quadra, che
 \section{Procedimento}
     \begin{enumerate}
         \item Descrivere dettagliatamente il problema; una volta fatto ciò si andrà a determinare i componenti necessari per assemblare il circuito.
+        \item Disegnare lo schema logico utilizzandolo poi per ricavare lo schema di montaggio su breadboard. È consigliabile progettare quest'ultimo prima di iniziare l'assemblaggio in maniera tale da posizionare sin da subito i componenti nella posizione ottimale.
+        \item Inziare ad assemblare i componenti sulla breadboard avendo cura di utilizzare i colori rosso e nero solo per l'alimentazione, piegando i cavi in modo tale da formare solo angoli retti e evitando di passare sopra gli integrati. 
+        \item Una volta che ci si è assicurati del corretto funzionamento del circuito tramite il generatore di funzioni, è possibile sostituire il generatore di funzioni con, ad esempio, una fotocellula che darà un colpo di clock quando un oggetto ci passa davanti.
+        \item Attivando lo switch S1 il contatore viene resettato mentre attivando lo switch S2 viene attivato o disattivato il conteggio. 
+        \item Chiedere al docente di laboratorio l'autorizzazione per il collaudo del circuto.
+        \item Eseguire il collaudo prestando attenzione a verificare tutte le possibili combinazioni possibili; nel caso in cui ci siano delle incongruenze si può ricorrere a un tester per controllare la correttezza delle tensioni o verificare la continuità dei conduttori.
+        \item \item Descrivere dettagliatamente il problema; una volta fatto ciò si andrà a determinare i componenti necessari per assemblare il circuito.
+        \item Disegnare lo schema logico utilizzandolo poi per ricavare lo schema di montaggio su breadboard. È consigliabile progettare quest'ultimo prima di iniziare l'assemblaggio in maniera tale da posizionare sin da subito i componenti nella posizione ottimale.
+        \item Inziare ad assemblare i componenti sulla breadboard avendo cura di utilizzare i colori rosso e nero solo per l'alimentazione, piegando i cavi in modo tale da formare solo angoli retti e evitando di passare sopra gli integrati. 
+        \item Una volta che ci si è assicurati del corretto funzionamento del circuito tramite il generatore di funzioni, è possibile sostituire il generatore di funzioni con, ad esempio, una fotocellula che darà un colpo di clock quando un oggetto ci passa davanti.
+        \item Attivando lo switch S1 il contatore viene resettato mentre attivando lo switch S2 viene attivato o disattivato il conteggio. 
+        \item Chiedere al docente di laboratorio l'autorizzazione per il collaudo del circuto.
+        \item Eseguire il collaudo prestando attenzione a verificare tutte le possibili combinazioni possibili; nel caso in cui ci siano delle incongruenze si può ricorrere a un tester per controllare la correttezza delle tensioni o verificare la continuità dei conduttori.
+        \item \item Descrivere dettagliatamente il problema; una volta fatto ciò si andrà a determinare i componenti necessari per assemblare il circuito.
         \item Disegnare lo schema logico utilizzandolo poi per ricavare lo schema di montaggio su breadboard. È consigliabile progettare quest'ultimo prima di iniziare l'assemblaggio in maniera tale da posizionare sin da subito i componenti nella posizione ottimale.
         \item Inziare ad assemblare i componenti sulla breadboard avendo cura di utilizzare i colori rosso e nero solo per l'alimentazione, piegando i cavi in modo tale da formare solo angoli retti e evitando di passare sopra gli integrati. 
         \item Una volta che ci si è assicurati del corretto funzionamento del circuito tramite il generatore di funzioni, è possibile sostituire il generatore di funzioni con, ad esempio, una fotocellula che darà un colpo di clock quando un oggetto ci passa davanti.
